# jtcmake

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: push-gh-pages.yml  python-package.yml  release.yml  sphinx-doc-generation-test.yml  sphinx-doctest.yml
docs/: .buildinfo  genindex.html  howto.html  index.html  objects.inv  reference.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  howto.doctree  index.doctree  jtcmake.core.doctree  jtcmake.doctree  jtcmake.frontend.doctree  jtcmake.logwriter.doctree  jtcmake.rule.doctree  jtcmake.rule.memo.doctree  jtcmake.utils.doctree  modules.doctree  reference.doctree
docs/_sources/: howto.rst.txt  index.rst.txt  reference.rst.txt
docs_src/: .gitignore  Makefile  make.py
docs_src/source/: conf.py  howto.rst  reference.rst
docs_src/source/example_c_build/: _make_resource.py  _make_resources.py  make.py
docs_src/source/example_c_build/src/liba/: a1.c  a2.c  a2.h  a3.c  a3.h
docs_src/source/example_c_build/src/libb/: b1.c  b1.h  b2.c  b2.h  b3.c  b3.h
docs_src/source/example_c_build/src/tools/: tool2.c
docs_src/source/example_hello/: make.py
docs_src/source/figure_group_tree/: draw.py
lightmake/: frontend.py
lightmake/core/: decls.py  make.py  make_mt.py
lightmake/writer/: writer.py
sphinx/: Makefile
sphinx/source/: conf.py  howto.rst  index.rst
src/jtcmake/: __init__.py  gen_pickle_key.py  logwriter.py  memo.py  raw_rule.py
src/jtcmake/core/: abc.py  check_update_result.py  events.py  make.py  make_mp.py  rule.py
src/jtcmake/frontend/: abc.py  abc.pyi  atom.py  event_logger.py  events.py  file.py  graphviz.py  group.py  group.pyi  group_base.py  group_common.py  groups.py  igroup.py  igroup.pyi  misc.py  rule.py
src/jtcmake/frontend/group_mixins/: child_adder.py  memo.py  selector.py
src/jtcmake/group_tree/: .gen_fake_path_code.py  atom.py  core.py  event_logger.py  fake_path.py  file.py  graphviz.py  groups.py  mermaidjs.py  misc.py  rule.py
src/jtcmake/group_tree/group_mixins/: basic.py  dynamic_container.py  memo.py  selector.py
src/jtcmake/group_tree/tools/: graphviz.py  mermaid.py  misc.py
src/jtcmake/logwriter/: writer.py
src/jtcmake/memo/: abc.py  str_hash_memo.py
src/jtcmake/rule/: file.py  file.pyi  rule.py
src/jtcmake/rule/memo/: __init__.py  abc.py  abc.pyi  imemo.py  pickle_memo.py  str_hash_memo.py
src/jtcmake/utils/: dict_view.py  frozen_dict.py  frozen_dict.pyi  nest.py  strpath.py
src/jtcmake/writer/: simplehtmlbuilder.py  writer.py
src/lightmake/: __init__.py  utils.py
src/lightmake/writer/: simplehtmlbuilder.py
src/omochamake/: utils.py
src/omochamake/core/: __init__.py  decls.py  make.py  make_.py  make_mt.py  misc.py
src/omochamake/frontend/: frontend.py  logger.py
tests/: test_e2e.py  test_file.py  test_frontend.py  test_group.py  test_make.py  test_rule.py  test_utils.py
tests/group_tree/: test_atom.py  test_core.py  test_groups.py  test_integration.py  test_rule_.py
tests/group_tree/group_mixins/: test_basic.py  test_common.py  test_memo.py  test_selector.py
tests/group_tree/groups/: test_group_of_groups.py  test_static_group_base.py  test_untyped_group.py
tests/group_tree/tools/: test_misc.py
tests/test_frontend/: test_group.py
tests/typing/: mypy_succ.py
