[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jtcmake"
license = { text = "MIT License" }
description = "Simple but effective general purpose build tool"
readme = "README.md"
authors = [
    { name = "Amane Sugiyama", email = "sugi98765@gmail.com" },
]
urls = { repo = "https://github.com/sugi-a/jtcmake" }
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Framework :: IPython",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.8"
dependencies = ["typing_extensions"]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "black>=22.12",
    "flake8>=6.0",
    "pyright>=1.1",
    "pytest>=7.2",
    "pytest-mock>=3.10",
]
deploy = [
    "build>=0.9",
    "twine>=4.0",
    "hatch>=1.6",
]
docs = [
    "sphinx>=5.3",
    "sphinx-rtd-theme>=1.1",
]

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/jtcmake"]

[tool.hatch.version]
path = "src/jtcmake/__init__.py"

[tool.black]
include = '(src|tests)/.+\.pyi?$'
line-length = 80

[tool.pyright]
include = ["src/jtcmake"]
pythonVersion = "3.8"
typeCheckingMode = "strict"
reportUnknownArgumentType = "none"

[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.mypy]
python_version = "3.8"
files = ["src/jtcmake"]

[[tool.mypy.overrides]]
module = "IPython.*"
ignore_missing_imports = true
