[metadata]
name = omochamake
version = 0.0.1
author = Amane Sugiyama
author_email = 42127588+sugi-a@users.noreply.github.com
description = Makefile-like light weight build tool for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sugi-a/omochamake
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = = src
python_requires = >=3.6

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

