[metadata]
name = jtcmake
version = 0.3.0
author = Amane Sugiyama
author_email = 42127588+sugi-a@users.noreply.github.com
description = Simple but effective general purpose build tool for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sugi-a/jtcmake
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = = src
python_requires = >=3.6

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

[flake8]
exclude =
    __pycache__
    .git
    .venv
    .ipynb_checkpoints
    dist
    docs
    examples

select = E9 F63 F7 F82
